syntax = "proto3";

package debondingdelegation;
option go_package = "github.com/jjangg96/oasis-rpc-proxy/grpc/debondingdelegation/debondingdelegationpb";

message DebondingDelegationEntry {
    map<string, DebondingDelegationInnerEntry> entries = 1;
}

message DebondingDelegationInnerEntry {
    repeated DebondingDelegation debondingDelegations = 1;
}

message DebondingDelegation {
    bytes shares = 1;
    uint64 DebondEndTime = 2;
}

message GetByAddressRequest {
    string address = 1;
    int64 height = 2;
}

message GetByAddressResponse {
    map<string, DebondingDelegationInnerEntry> debonding_delegations = 1;
}

service DebondingDelegationService {
    rpc GetByAddress (GetByAddressRequest) returns (GetByAddressResponse) {};
}