syntax = "proto3";

package delegation;
option go_package = "github.com/jjangg96/oasis-rpc-proxy/grpc/delegation/delegationpb";

message DelegationEntry {
    map<string, Delegation> entries = 1;
}

message Delegation {
    bytes shares = 1;
}

message GetByAddressRequest {
    string address = 1;
    int64 height = 2;
}

message GetByAddressResponse {
    map<string, Delegation> delegations = 1;
}

service DelegationService {
    rpc GetByAddress (GetByAddressRequest) returns (GetByAddressResponse) {};
}